# testing_talkie

./: .gitignore  analyze_synthetic_composition.py  binned_years.py  gen_synthetic_expansion.py  make_binned_charts.py  make_rnl_chart.py  make_synthetic_sets.py  obsolete_brown.py  probe_postcutoff.py  pyproject.toml  run_eval.py  synthetic_1913.jsonl  synthetic_1913_super.jsonl  synthetic_1930.jsonl  synthetic_1930_super.jsonl  synthetic_words.csv  tron_test_cases.jsonl  visualize_aggregate.py
analysis/: postcutoff_seedwords_1913.csv  postcutoff_seedwords_1930.csv  postcutoff_talkie-base_senses.csv  postcutoff_talkie-base_words.csv  postcutoff_talkie-web_senses.csv  postcutoff_talkie-web_words.csv  postcutoff_typewriter_senses.csv  postcutoff_typewriter_words.csv  synth_candidates_1913.json  synth_candidates_1913_mech.json  synth_candidates_1930.json  synth_candidates_1930_mech.json  synth_drops_1913.json  synth_drops_1930.json  synth_final_drops_1913.json  synth_final_drops_1930.json  synthcomp_talkie-base_joined.csv  synthcomp_talkie-web_joined.csv  synthcomp_typewriter_joined.csv
evals/: __init__.py  beam_search.py  cloze.py  composition.py  constraints.py  logits_processor.py  metrics.py  prompts.py  registry.py
evals/backends/: __init__.py  base.py  factory.py  hf_backend.py  tiktoken_backend.py
tests/: fakes.py  test_beam_search.py  test_cloze_smoke.py  test_cloze_year_handling.py  test_constraints.py  test_logits_processor.py  test_metrics.py  test_oracle_equivalence.py  test_registry.py  test_tokenizer_classification.py
